# Sherlog-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.android  LICENSE  MCP_INTEGRATION_README.md  QUICKSTART.md  README.md  REMOTE_CONNECTION.md  build.sh  docker-compose.android.yml  docker-compose.yml  install.sh  logai_mcp_server.py  mcp.json  mcp_config.json  pyproject.toml  run-integration-tests.sh  sherlog_mcp_server.py
logai_mcp/: config.py  dataframe_utils.py  ipython_shell_utils.py  mcp_manager.py  mcp_tools.py  server.py  session.py  shell_integration.py
logai_mcp/tools/: __init__.py  anomaly.py  cloudwatch_tools.py  clustering.py  code_retrieval.py  data_loading.py  docker_tools.py  external_mcp_tools.py  feature_extraction.py  file_loading.py  filesystem_tools.py  github_tools.py  grafana_tools.py  kubernetes_tools.py  mindsdb_tools.py  mixpanel_tools.py  pipelines.py  preprocessing.py  s3_tools.py  sentry_tools.py  treesitter_parser.py  vectorization.py
scripts/: setup-github-cli.sh
sherlog_mcp/: __init__.py  config.py  dataframe_utils.py  ipython_shell_utils.py  main.py  server.py  session.py
sherlog_mcp/api/: oauth_config.py  oauth_token_utils.py  routes.py  token_manager.py
sherlog_mcp/middleware/: __init__.py  session_middleware.py
sherlog_mcp/oauth/: __init__.py  google_oauth.py  models.py  token_storage.py
sherlog_mcp/static/: index.html
sherlog_mcp/tools/: __init__.py  android_jobs.py  anomaly.py  cli_tools.py  cloudwatch_tools.py  clustering.py  code_retrieval.py  data_loading.py  docker_tools.py  external_mcp_tools.py  feature_extraction.py  file_loading.py  filesystem_tools.py  github_tools.py  grafana_tools.py  kubernetes_tools.py  mixpanel_tools.py  preprocessing.py  pypi_core.py  s3_tools.py  sentry_tools.py  tool_utils.py  treesitter_parser.py  utilities.py  vectorization.py
tests/: Dockerfile.test
tests/integration/: README.md  test_basic_connection.py  test_basic_connection_sdk.py  test_google_sheets.py  test_google_sheets_sdk.py  test_multi_mcp_integration.py  test_multi_mcp_integration_sdk.py
